Update to openAPI and routes/web
