# a7_openapi.yml
@@ -383,7 +383,298 @@ paths:
         "404":
           description: "User not found"
 
-  # M08 Static Pages
+  /search/users:
+    get:
+      operationId: R209
+      summary: "R209 : User search"
+      description: "Provides a page component with a list of users, according to the parameters. Access: PUB"
+      tags:
+        - "M02: Profile and User Information"
+
+      parameters:
+        - in: query
+          name: value
+          description: "string used for full-text search"
+          schema:
+            type: string
+          required: true
+        - in: query
+          name: offset
+          description: "value used to fetch results starting at a certain value"
+          schema:
+            type: integer
+            minimum: 0
+            default: 0
+          required: false
+        - in: query
+          name: limit
+          description: "value used to limit the number of results"
+          schema:
+            type: integer
+            minimum: 1
+          required: false
+
+      responses:
+        "200":
+          description: "OK. Show a list of users."
+
+  # M03 : Articles
+
+  /search:
+    get:
+      operationId: R301
+      summary: "R301 : Search Page"
+      description: "Show Search Page given a search type and value. Access: PUB"
+      tags:
+        - "M02: Profile and User Information"
+        - "M03: Articles"
+
+      parameters:
+        - in: query
+          name: type
+          description: "Search type"
+          schema:
+            type: string
+            enum:
+              - "article"
+              - "user"
+          required: true
+        - in: query
+          name: query
+          description: "string used for full-text search"
+          schema:
+            type: string
+          required: false
+
+      responses:
+        "200":
+          description: "OK. Show search page"
+
+  /search/articles:
+    get:
+      operationId: R302
+      summary: "R302 : Returns articles according to given parameters"
+      description: "Returns search results according to user parameters. Access: PUB"
+      tags:
+        - "M03: Articles"
+
+      parameters:
+        - in: query
+          name: query
+          description: "string used for full-text search"
+          schema:
+            type: string
+          required: false
+        - in: query
+          name: offset
+          description: "value used to fetch results starting at a certain value"
+          schema:
+            type: integer
+            minimum: 0
+            default: 0
+          required: false
+        - in: query
+          name: limit
+          description: "value used to limit the number of results"
+          schema:
+            type: integer
+            minimum: 1
+          required: false
+
+      responses:
+        "200":
+          description: "OK. Show searched articles"
+
+  /article:
+    get:
+      operationId: R303
+      summary: "R303 : Create article form"
+      description: "Provide new article creation form. Access: USR"
+      tags:
+        - "M03: Articles"
+
+      responses:
+        '200':
+          description: 'Ok. Show Create Article Form'
+        '302':
+          description: 'Redirect after trying to get Create Article Form'
+          headers:
+            Location:
+              schema:
+                type: string  
+              examples:
+                302Failure:
+                  description: 'You are not logged in. Failed article creation. Redirect to login Page.'
+                  value: '/login' 
+
+    post:
+      operationId: R304
+      summary: "R304 : Create article action"
+      description: "Processes the new article creation form. Access: USR"
+      tags:
+        - "M03: Articles"
+
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                thumbnail:
+                  type: string
+                  format: binary
+                body:
+                  type: string
+                topic_id:
+                  type: array
+                  minLength: 1
+                  maxLength: 3
+              required:
+                - title
+                - body
+                - topic_id
+
+  /article/{id}:
+    get:
+      operationId: R305
+      summary: "R305 : View Article Page"
+      description: "View an Article Page. Access: PUB"
+      tags:
+        - "M03: Articles"
+
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+
+      responses:
+        "200":
+          description: "OK. Show Article Page"
+        "404":
+          description: "Article not found"
+
+    delete:
+      operationId: R306
+      summary: "R306 : Delete article action"
+      description: "Processes a request to delete an article. Access: OWN, ADM"
+      tags:
+        - "M03: Articles"
+
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+
+      responses:
+        302:
+          description: "Redirect after deleting article."
+          headers:
+            Location:
+              schema:
+                type: string
+              examples:
+                302Success:
+                  description: "Successful article deletion. Redirect to homepage."
+                  value: "/"
+                302Failure:
+                  description: "Failed to delete article. Redirect to article page"
+                  value: "/article/{id}"
+
+
+      responses:
+        "302":
+          description: "Redirect after processing the create article form."
+          headers:
+            Location:
+              schema:
+                type: string
+              examples:
+                302Success:
+                  description: "Successful article creation. Redirect to Article Page."
+                  value: "/article/{id}"
+                302Failure:
+                  description: "Failed article creation. Redirect to Create Article form."
+                  value: "/article"
+
+
+/article/{id}/edit:
+    get:
+      operationId: R307
+      summary: "R307 : Article edition form"
+      description: "Provide a form for article edition. Access: OWN"
+      tags:
+        - "M03: Articles"
+
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+
+      responses:
+        "200":
+          description: "OK. Show article edition form"
+        "401":
+          description: "Unauthorized. Must be authenticated."
+        "403":
+          description: "Unauthorized. Must be the owner of the article"
+        "404":
+          description: "Article not found"
+
+    put:
+      operationId: R308
+      summary: "R308 : Edit article action"
+      description: "Processes the user edit profile form submission. Access: OWN"
+      tags:
+        - "M03: Articles"
+
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: integer
+          required: true
+
+      requestBody:
+        required: true
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                thumbnail:
+                  type: string
+                  format: binary
+                body:
+                  type: string
+
+      responses:
+        "302":
+          description: "Redirect after processing the article updated information"
+          headers:
+            Location:
+              schema:
+                type: string
+              examples:
+                302Success:
+                  description: "Successful article edition. Redirect to the article page."
+                  value: "/article/{id}"
+                302Failure:
+                  description: "Failed article edition. Redirect to the edit article page."
+                  value: "/article/{id}/edit"
+
+
+  # M08 : Static Pages
 
   /about:
     get:
